# sfml_template_cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
